# ninety-nine-haskell-problems

./: .travis.yml  README.md  ninety-nine-haskell-problems.cabal  stack.yaml
src/: Problems1To10.hs  Run.hs
test/: hlint.hs
