name:                   ninety-nine-haskell-problems
version:                0.0.1
synopsis:               Ninety-nine Haskell problems.
homepage:               https://github.com/unindented/ninety-nine-haskell-problems
license:                MIT
license-file:           LICENSE
copyright:              (c) 2015 Daniel Perez Alvarez
author:                 Daniel Perez Alvarez <unindented@gmail.com>
maintainer:             Daniel Perez Alvarez <unindented@gmail.com>
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

source-repository head
  type:                 git
  location:             https://github.com/unindented/ninety-nine-haskell-problems

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
  build-depends:        base >= 4.7 && < 5

test-suite hlint
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -w
  hs-source-dirs:       test
  main-is:              hlint.hs
  build-depends:        base
                      , hlint

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
  hs-source-dirs:       test
  main-is:              doctest.hs
  build-depends:        base
                      , doctest
                      , Glob
